new file:   src/3 	modified:   src/dataset.py 	new file:   src/loss/__init__.py 	new file:   src/loss/utils.py 	modified:   src/models/gluoncv_resnet.py 	modified:   src/pretrained-resnet34-with-rgby-0-460-public-lb.ipynb 	modified:   src/test.py 	modified:   src/train.py 	modified:   src/train_config.py 	deleted:    src/custom_utils.py

--- a/src/pretrained-resnet34-with-rgby-0-460-public-lb.ipynb
+++ b/src/pretrained-resnet34-with-rgby-0-460-public-lb.ipynb
@@ -56,7 +56,8 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "_uuid": "1dcb0ed47f29e7a457cc54500b97ab4e96405e8e"
+    "_uuid": "1dcb0ed47f29e7a457cc54500b97ab4e96405e8e",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -71,7 +72,8 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "_uuid": "87ad005d93033f87ab77acf72d2d6f6cb4a33193"
+    "_uuid": "87ad005d93033f87ab77acf72d2d6f6cb4a33193",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -110,7 +112,8 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "_uuid": "8147c0b2f23cf4b646e83f3026698f6df243e468"
+    "_uuid": "8147c0b2f23cf4b646e83f3026698f6df243e468",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -131,7 +134,8 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "_uuid": "13dd9234ce2f843d5d7169d5ebef515543a632bd"
+    "_uuid": "13dd9234ce2f843d5d7169d5ebef515543a632bd",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -144,7 +148,8 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "_uuid": "b5ae50160b85e023518ee17d62e4ff216eb5b9fb"
+    "_uuid": "b5ae50160b85e023518ee17d62e4ff216eb5b9fb",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -169,7 +174,8 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "_uuid": "0dd72024e421ac2ced8a21389e15e914fae8d6a8"
+    "_uuid": "0dd72024e421ac2ced8a21389e15e914fae8d6a8",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -204,7 +210,8 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "_uuid": "2279cbaea32d80e9bf030b4a3e74ade811a52b3a"
+    "_uuid": "2279cbaea32d80e9bf030b4a3e74ade811a52b3a",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -367,7 +374,8 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "_uuid": "b3f8762045c4087ae9aecd22f8c13a075f567d7a"
+    "_uuid": "b3f8762045c4087ae9aecd22f8c13a075f567d7a",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -395,7 +403,8 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "_uuid": "06c8f2af90481b71e1f174c584b7d1d2a0697363"
+    "_uuid": "06c8f2af90481b71e1f174c584b7d1d2a0697363",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -428,7 +437,8 @@
    "execution_count": 14,
    "metadata": {
     "_kg_hide-input": true,
-    "_uuid": "96778d73cae9d6a9a3f1acc2fecd1a7f5363e29b"
+    "_uuid": "96778d73cae9d6a9a3f1acc2fecd1a7f5363e29b",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
